projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/Metadata_Dependency__c.object-meta.xml
<CustomObject>
    <description>Represents one metadata dependency discovered during a scan. Records exist only while the scan is active - they are the engine's working state that tracks which components have been found and which still need processing. When the scan completes, all records for that job are serialized to a Salesforce File and deleted, freeing Data Storage. Records for Failed or Cancelled scans remain until the nightly cleanup batch removes them. Do not create or edit records manually.</description>
    <label>Metadata Dependency</label>
    <nameField>
        <displayFormat>MDN-{0000}</displayFormat>
        <label>Metadata Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>