projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Ancestor_Id_Prefix_Index__c.field-meta.xml
<CustomField>
    <fullName>Ancestor_Id_Prefix_Index__c</fullName>
    <description>Internal engine field. Stores pipe-delimited 6-character prefixes of each ancestor Metadata_Id__c value as a fast pre-screen index for cycle detection. Before running the expensive full Ancestor_Path__c containment check, the engine checks this index. A match triggers the conclusive full-string check; no match skips it entirely. Do not edit manually.</description>
    <label>Ancestor ID Prefix Index</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>