projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Ancestor_Id_Shortkeys__c.field-meta.xml
<CustomField>
    <fullName>Ancestor_Id_Shortkeys__c</fullName>
    <description>Internal engine field. Stores pipe-delimited 6-character tails (last 6 characters, via .right(6)) of each ancestor Metadata_Id__c value as a fast pre-screen index for cycle detection. Uses the auto-number suffix portion of the 18-char ID, which is unique per component - unlike the entity key prefix (left 6 chars) which is identical for all components of the same type. Before running the expensive full Ancestor_Path__c containment check, the engine checks this index. A match triggers the conclusive full-string check; no match skips it entirely. Do not edit manually.</description>
    <label>Ancestor Id Shortkeys</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>