projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Ancestor_Path__c.field-meta.xml
<CustomField>
    <fullName>Ancestor_Path__c</fullName>
    <description
  >Pipe-delimited chain of Metadata_Id__c values from the root component down to this node's parent (e.g. "id1|id2|id3"). Used to detect true ancestry cycles via delimiter-safe containment check. Preserved on circular nodes for debugging and export. Do not edit manually.</description>
    <label>Ancestor Path</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>