projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Cycle_Prefix_Index__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Prefix_Index__c</fullName>
    <description>Internal engine field. Stores pipe-delimited 6-character prefixes of each ancestor ID as a fast pre-screen index. The engine checks this index before running the expensive full Ancestor_Path__c string search. A match here triggers the conclusive full-string confirmation; no match skips it entirely. Only consulted by the cycle detection engine. Do not edit manually. Ref: ISP-6072</description>
    <label>Cycle Prefix Index</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>