projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Dependency_Context__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Context__c</fullName>
    <description
  >Type-specific attributes describing this dependency's role and context within the scan. Stored as versioned JSON (root 'v' key). Values rendered as plain-English badges in the UI — never displayed as raw JSON. Populated by the scan engine only.</description>
    <label>Component Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>