projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Dependency_Depth__c.field-meta.xml
<CustomField>
    <fullName>Dependency_Depth__c</fullName>
    <description
  >How many levels deep this component is from the scan target. 0 = the scan target itself. 1 = direct dependency. Used for depth filtering in the UI. Do not edit manually.</description>
    <label>Dependency Depth</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>