projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Discovery_Source__c.field-meta.xml
<CustomField>
    <fullName>Discovery_Source__c</fullName>
    <description>How this dependency was discovered. ToolingAPI = found by the standard MetadataComponentDependency query. Supplemental = found by a secondary handler query that fills a known Tooling API gap. Supplemental results carry a confidence score.</description>
    <label>Discovery Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ToolingAPI</fullName>
                <label>Tooling API</label>
            </value>
            <value>
                <fullName>Supplemental</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>