projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Has_Fetched_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Has_Fetched_Dependencies__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Engine processing flag. False = the Tooling API has not yet been called to discover this component's child dependencies. True = the Tooling API fetch is complete for this node, or the node was intentionally marked done (circular node, dynamic reference, or max ancestor depth exceeded). The engine queries WHERE Has_Fetched_Dependencies__c = false to find pending work. Do not edit manually.</description>
    <label>Has Fetched Dependencies</label>
    <type>Checkbox</type>
</CustomField>