projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Is_Circular__c.field-meta.xml
<CustomField>
    <fullName>Is_Circular__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True if this component appears in its own ancestor chain (a real dependency cycle, e.g. A depends on B which depends on A). Displayed with a dashed border in the graph. The scan does not traverse further from circular nodes to prevent infinite loops.</description>
    <label>Is Circular</label>
    <type>Checkbox</type>
</CustomField>