projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Is_Dynamic_Reference__c.field-meta.xml
<CustomField>
    <fullName>Is_Dynamic_Reference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this dependency was detected as a dynamic Apex string reference that cannot be statically resolved. Displayed with a warning badge. These nodes represent potential dependencies that require manual investigation.</description>
    <label>Is Dynamic Reference</label>
    <type>Checkbox</type>
</CustomField>