projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Metadata_Id__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Id__c</fullName>
    <description
  >The 18-character Salesforce record ID of the metadata component as returned by the Tooling API. Used as the unique identifier for deduplication and cycle detection. Do not edit manually.</description>
    <label>Metadata ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>