projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Metadata_Name__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Name__c</fullName>
    <description
  >The human-readable API name of the metadata component (e.g. AccountTrigger, My_Custom_Field__c). Displayed as the node label in the tree and graph views.</description>
    <label>Metadata Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>