projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Metadata_Scan_Job__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Scan_Job__c</fullName>
    <description
  >Reference to the parent scan job. All dependency records for a scan are deleted when the job is deleted via Master-Detail cascade. Required.</description>
    <label>Metadata Scan Job</label>
    <referenceTo>Metadata_Scan_Job__c</referenceTo>
    <relationshipLabel>Metadata Dependencies</relationshipLabel>
    <relationshipName>Metadata_Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>