projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Metadata_Type__c.field-meta.xml
<CustomField>
    <fullName>Metadata_Type__c</fullName>
    <description
  >The type of the metadata component (e.g. ApexClass, Flow, CustomField). Used for color-coding in the graph, type filtering in the tree, and routing to supplemental query handlers.</description>
    <label>Metadata Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>