projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Node_Uniqueness_Key__c.field-meta.xml
<CustomField>
    <fullName>Node_Uniqueness_Key__c</fullName>
    <description>Composite key used to prevent duplicate records: format is "JobId:Metadata_Id__c". Used as an External ID for upsert operations in the scan engine. Prevents race conditions when multiple async cycles discover the same component simultaneously. Do not edit manually. Ref: ISP-6072</description>
    <externalId>true</externalId>
    <label>Node Uniqueness Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>