projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Parent_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Parent_Dependency__c</fullName>
    <description>Reference to the parent dependency in the spanning tree. Null for the root component (the scan target itself). Self-referential bulk DML constraint: the root node must be committed before children can reference it - insert root first, commit, then bulk-upsert children. Used to reconstruct the dependency tree in the UI.</description>
    <label>Parent Dependency</label>
    <referenceTo>Metadata_Dependency__c</referenceTo>
    <relationshipLabel>Child Dependencies</relationshipLabel>
    <relationshipName>Child_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>