projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Supplemental_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Confidence__c</fullName>
    <description
  >Confidence score (0-100) for supplemental dependencies only. Reflects how certain the match is: exact field matches score 95, regex formula matches score 65. Nodes below 70 display a warning badge prompting manual verification. Null for Tooling API nodes.</description>
    <label>Supplemental Confidence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>