projects/meta-mapper/force-app/main/default/objects/Metadata_Dependency__c/fields/Traversal_Complete__c.field-meta.xml
<CustomField>
    <fullName>Traversal_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal engine flag. False = this component's child dependencies have not yet been discovered during traversal. True = traversal is complete for this node, or intentionally skipped (circular node, dynamic reference, or max ancestor depth exceeded). The engine queries WHERE Traversal_Complete__c = false to find pending work. Do not edit manually.</description>
    <label>Traversal Complete</label>
    <type>Checkbox</type>
</CustomField>